--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
           TOM WATSON JR. 
           <div class="contact">
             <a href="mailto:tom@ibm.com">
-              <img src="/HTML Final Project/Assets/mail.svg" alt="Email" id="email-default" class="cl">
-              <img src="/HTML Final Project/Assets/mail-b.svg" alt="Email" id="email-hover" class="cl2">  
+              <img src="/Assets/mail.svg" alt="Email" id="email-default" class="cl">
+              <img src="/Assets/mail-b.svg" alt="Email" id="email-hover" class="cl2">  
             </a>
               <a href="mailto:tom@ibm.com" style="color: inherit; text-decoration: none;">tom@ibm.com</a><br>
             <a href="tel:+18184249534">
