--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
           TOM WATSON JR. 
           <div class="contact">
             <a href="mailto:tom@ibm.com">
-              <img src="/Assets/mail.svg" alt="Email" id="email-default" class="cl">
-              <img src="/Assets/mail-b.svg" alt="Email" id="email-hover" class="cl2">  
+              <img src="Assets/mail.svg" alt="Email" id="email-default" class="cl">
+              <img src="Assets/mail-b.svg" alt="Email" id="email-hover" class="cl2">  
             </a>
               <a href="mailto:tom@ibm.com" style="color: inherit; text-decoration: none;">tom@ibm.com</a><br>
             <a href="tel:+18184249534">
@@ -39,7 +39,7 @@
         </nav>
       </section>
       <div class="bioblock"> <!-- BIO -->
-        <img src="/HTML Final Project/Assets/Avatar.png" class="avatar" alt="Tom_portrait">
+        <img src="Assets/Avatar.png" class="avatar" alt="Tom_portrait">
         <div class="bio">
           <h1 class="bioheader">Hi, I'm Tom Watson!🤘</h1>
           <p class="biotext">
@@ -50,32 +50,32 @@
       <h1 class="profile-subheader" id="skills"> Skills </h1>
       <div class="profile-block"> <!-- SKILLS -->
         <div class="skill"> 
-          <img src="/HTML Final Project/Assets/html.png" class="skillicon">
+          <img src="Assets/html.png" class="skillicon">
           HTML <br>
           2 years of experience
         </div>
         <div class="skill"> 
-          <img src="/HTML Final Project/Assets/Javascript.png" class="skillicon">
+          <img src="Assets/Javascript.png" class="skillicon">
           JavaScript <br>
           1.5 years of experience
         </div>
         <div class="skill"> 
-          <img src="/HTML Final Project/Assets/java.png" class="skillicon">
+          <img src="Assets/java.png" class="skillicon">
           Java <br>
           .5 years of experience
         </div>
         <div class="skill"> 
-          <img src="/HTML Final Project/Assets/react.png" class="skillicon">
+          <img src="Assets/react.png" class="skillicon">
           React <br>
           1 year of experience
         </div>
         <div class="skill"> 
-          <img src="/HTML Final Project/Assets/node-js.png" class="skillicon">
+          <img src="Assets/node-js.png" class="skillicon">
           Node.JS <br>
           1 year of experience
         </div>
         <div class="skill"> 
-          <img src="/HTML Final Project/Assets/css-3.png" class="skillicon">
+          <img src="Assets/css-3.png" class="skillicon">
           CSS <br>
           2 years of experience
         </div>
@@ -117,7 +117,7 @@
 </div>
 <div><!-- GET ME UP TOP BUTTOM -->
   <a href=#top>
-  <img src="/HTML Final Project/Assets/Arrow_Up.png" class="arrow"></a>
+  <img src="Assets/Arrow_Up.png" class="arrow"></a>
 </div>
     <footer>
     
