--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-      <title>Document</title>
+      <title>Tom's Cool Portfolio</title>
       <link rel="stylesheet" href="style.css">
       <script src="script.js"></script>
       <link rel="preconnect" href="https://fonts.googleapis.com">
